tests/codegen/fail/interface/trait/fields_duplicate.stderr
error: GraphQL interface must have a different name for each field
 --> fail/interface/trait/fields_duplicate.rs:4:1
  |
4 | / trait Character {
5 | |     fn id(&self) -> &str;
6 | |
7 | |     #[graphql(name = "id")]
8 | |     fn id2(&self) -> &str;
9 | | }
  | |_^
  |
  = note: https://spec.graphql.org/October2021#sec-Interfaces
